# tglib-bench

./: .gitignore  _commit.sh  deno.jsonc  util.py
.github/workflows/: bench.yml
00_mtkruto/: deno.json  env.ts  main.ts  results.json
01_fasttelethon/: FastTelethon.py  main.py  results.json  util.py
02_mtcute/: env.ts  main.ts  package.json  pnpm-lock.yaml  results.json
03_telethon/: main.py  pyproject.toml  results.json  util.py
04_fast_telethon/: FastTelethon.py  main.py  pyproject.toml  results.json  util.py
04_tdlib/: .gitignore  CMakeLists.txt  main.cpp  main.sh  results.json
05_wtelegramclient/: .gitignore  main.cs  results.json  wtc-bench.csproj
06_madelineproto/: .gitignore  Dockerfile  docker-compose.yml  main.php  results.json
07_pyrogrammod/: env.py  main.py  pyproject.toml  results.json  util.py
08_gogram/: go.mod  go.sum  main.go  results.json
09_mtgo/: go.mod  go.sum  main.go  results.json
10_gotd/: go.mod  main.go  results.json
11_gotdbot/: go.mod  go.sum  main.go
11_teleproto/: main.ts
11_wzgram/: env.py  main.py  pyproject.toml  results.json
12_kurigram/: env.py  main.py  pyproject.toml  util.py
12_teleproto/: package.json  pnpm-lock.yaml  results.json
13_mtflute/: main.dart  pubspec.yaml  results.json
14_laragram/: .gitignore  main.php  results.json
